-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 9
-
Component/s: core-libs
-
b112
-
windows
In order to support pre-Vista versions of Windows, several Win32 API functions, viz., FindFirstStreamW(), FindNextStreamW(), CreateSymbolicLinkW(), and GetFinalPathNameByHandleW(), had to be loaded dynamically by first obtaining the kernel32 module handle from GetModuleHandleExW() and then using this handle to obtain the addresses of the functions. This is no longer necessary in the versions of Windows required by JDK 8 onward, so the Win32 API functions should be able to be used directly without resorting to dynamic lookup.
- duplicates
-
JDK-8193173 InternalError: Should not get here at sun.nio.fs.WindowsNativeDispatcher.FindFirstStream0
-
- Closed
-
- relates to
-
JDK-8046686 (fs) Files.CreateSymbolicLink failed with InternalError "Should not get here" (win)
-
- Closed
-
-
JDK-8151915 (fs) toRealPath on a path with a junction fails with an "java.lang.InternalError: Should not get here"
-
- Closed
-
-
JDK-8154208 (fs) Drop code for Windows XP/2003 from file system provider
-
- Resolved
-