8152043: (fs) Remove dynamic loopup of Win32 API functions in WindowsNativeDispatcher needed to support Windows XP and Server 2003

Remove dynamic lookup of Win32 functions which was required to support Windows XP and Windows Server 2003.

Reviewed-by: alanb